--- a/Assignment 2/main.tex
+++ b/Assignment 2/main.tex
@@ -178,6 +178,7 @@ https://github.com/DarkWake9/EE3900/blob/main/Assignment%202/main.tex
 		x(4) = 1 \quad x(5) = 0 \quad x(6) = \frac{1}{9} \quad x(7) = 0\\
 		x(n) = 
 		\begin{cases}
+			0, \quad $if $x < 02\\
 			\brak{\dfrac{1}{3}}^{\tfrac{n}{3}} & $if$ \quad \dfrac{n}{3} = \sbrak{\dfrac{n}{3}}\\
 			0 & \text{otherwise}
 		\end{cases}
