--- a/Assignment 1/filter/main.tex
+++ b/Assignment 1/filter/main.tex
@@ -44,7 +44,7 @@
 \newcommand\showdiv[1]{\overline{\smash{\hstretch{.5}{)}\mkern-3.2mu\hstretch{.5}{)}}#1}}
 \usepackage{polynom}
 %\usepackage{stmaryrd}
-
+\let\vec\mathbf
 
 %\usepackage{wasysym}
 %\newcounter{MYtempeqncnt}
@@ -92,6 +92,7 @@
 	\newcommand{\myvec}[1]{\ensuremath{\begin{pmatrix}#1\end{pmatrix}}}
 	\newcommand{\mydet}[1]{\ensuremath{\begin{vmatrix}#1\end{vmatrix}}}
 	
+	
 	\bibliographystyle{IEEEtran}
 	%\bibliographystyle{ieeetr}
 	
@@ -112,6 +113,7 @@
 	\theoremstyle{remark}
 	\newtheorem{rem}{Remark}
 	\newcommand{\sgn}{\mathop{\mathrm{sgn}}}
+	
 	\providecommand{\abs}[1]{\left\vert#1\right\vert}
 	\providecommand{\res}[1]{\Res\displaylimits_{#1}} 
 	\providecommand{\norm}[1]{\lVert#1\rVert}
@@ -119,7 +121,7 @@
 	\providecommand{\mean}[1]{E\left[ #1 \right]}
 	\providecommand{\fourier}{\overset{\mathcal{F}}{ \rightleftharpoons}}
 	\providecommand{\ztrans}{\overset{\mathcal{Z}}{ \rightleftharpoons}}
-	
+
 	%\providecommand{\hilbert}{\overset{\mathcal{H}}{ \rightleftharpoons}}
 	\providecommand{\system}{\overset{\mathcal{H}}{ \longleftrightarrow}}
 	%\newcommand{\solution}[2]{\textbf{Solution:}{#1}}
@@ -690,9 +692,8 @@ wget https://raw.githubusercontent.com/gadepall/EE1310/master/filter/codes/yncon
 			=\sum_{k=-\infty}^{\infty}\left(\sum_{n=-\infty}^{\infty} x[n] h[n-k]\right) z^{-k} \\
 			=\sum_{k=-\infty}^{\infty} y[n] z^{-k}=Y($z$) \\
 			\implies Y(z) = X(z) \cdot H(z)
-0			\end{align}
+		\end{align}
 		now put $n+m=k \quad n=-\infty$
-		
 		\begin{align}
 			\Rightarrow Y(z)=\sum_{k=-\infty}^{\infty} x(m-k) \sum_{m=-\infty}^{\infty} h(m) z^{-k} \\
 			=\sum_{k=-\infty}^{\infty}\left(\sum_{m=-\infty}^{\infty} x[m-k] h[k]\right) z^{-k} \\
@@ -710,18 +711,25 @@ wget https://raw.githubusercontent.com/gadepall/EE1310/master/filter/codes/yncon
 	\begin{equation}
 		X(k) \define \sum _{n=0}^{N-1}x(n) e^{-\j2\pi kn/N}, \quad k = 0,1,\dots, N-1
 	\end{equation}
-	and $H(k)$ using $h(n)$.
-%	\solution
-		\begin{figure}[!ht]
+	and $H(k)$ using $h(n)$.\\
+\newline	\solution
+	\begin{figure}[!ht]
 		\centering
-		\includegraphics[width=\columnwidth]{./figs/e6.4-IFFT.jpg}
-		\caption{$y(n)$ using IFFT}
-		\label{fig:ifft}
+		\includegraphics[width=\columnwidth]{./figs/e6.1DFT.jpg}
+		\caption{$X(k)$ and $H(k)$ using DFT}
+		\label{fig:Xkdft}
 	\end{figure}
 	\item Compute 
 	\begin{equation}
 		Y(k) = X(k)H(k)
 	\end{equation}
+	\solution
+	\begin{figure}[!ht]
+		\centering
+		\includegraphics[width=\columnwidth]{./figs/XkDFT.jpg}
+		\caption{$Y(k)$ using DFT}
+		\label{fig:Ykdft}
+	\end{figure}
 	\item Compute
 	\begin{equation}
 		y\brak{n}={\frac {1}{N}}\sum _{k=0}^{N-1}Y\brak{k}\cdot e^{\j 2\pi kn/N},\quad n = 0,1,\dots, N-1
@@ -740,260 +748,456 @@ wget https://raw.githubusercontent.com/gadepall/EE1310/master/filter/codes/yndft
 		\caption{$y(n)$ from the DFT}
 		\label{fig:yndft}
 	\end{figure}
-\vspace{2cm}
 	\item Repeat the previous exercise by computing $X(k), H(k)$ and $y(n)$ through FFT and 
 	IFFT.
 	\solution The following code plots Fig. \ref{fig:fft}, and \ref{fig:ifft}. 
 	\begin{lstlisting}
 wget https://github.com/DarkWake9/EE3900/blob/main/Assignment%201/e6.4.py
 	\end{lstlisting}
-	\begin{enumerate}
-
 	\begin{figure}[!ht]
 		\centering
 		\includegraphics[width=\columnwidth]{./figs/e6.4-FFT.jpg}
-		\caption{Outputs using FFT}
+		\caption{$X(k)$, $Y(k)$ and $H(k)$ using FFT}
 		\label{fig:fft}
 	\end{figure}
-\item 
+%	\vspace{5cm}
 	\begin{figure}[!ht]
-		\centering
-		\includegraphics[width=\columnwidth]{./figs/e6.4-IFFT.jpg}
-		\caption{$y(n)$ using IFFT}
-		\label{fig:ifft}
+	\centering
+	\includegraphics[width=\columnwidth]{./figs/e6.4DFT-FFT.jpg}
+	\caption{Comparision of $y(n)$ obtained from \\ DFT (above) and IFFT (below)}
+	\label{fig:dftfft}
 	\end{figure}
-	Note that the figure \ref{fig:ifft} is the same as $y(n)$ in Fig. \ref{fig:xnyn}
 	\end{enumerate}
-	%\item Wherever possible, express all the above equations as matrix equations.
-	%\item Verify the above equations by generating the DFT matrix in python.
-\end{enumerate}
-\vspace{2cm}
+	
 \section{FFT}
-\subsection{Definitions}
+% \subsection{Definitions}
 \begin{enumerate}[label=\arabic*.,ref=\thesection.\theenumi]
 	\numberwithin{equation}{section}
 	\item The DFT of $x(n)$ is given by
-	\begin{align}
-		X(k) \triangleq \sum_{n=0}^{N-1} x(n) e^{-j 2 \pi k n / N}, \quad k=0,1, \ldots, N-1
-	\end{align}
-	\item Let 
-	\begin{align}
-		W_{N} = e^{-j2\pi/N} 
-	\end{align}
-	Then the $N$-point {\em DFT matrix} is defined as 
-	\begin{align}
-		\vec{F}_{N} = \sbrak{W_{N}^{mn}}
-	\end{align}
-	where $W_{N}^{mn}$ are the elements of $\vec{F}_{N}$.
-	\item Let 
-	\begin{align}
-		\vec{I}_4 = \myvec{\vec{e}_4^{1} &\vec{e}_4^{2} &\vec{e}_4^{3} &\vec{e}_4^{4} }
-	\end{align}
-	be the $4\times 4$ identity matrix.  Then the 4 point {\em DFT permutation matrix} is defined as 
-	\begin{align}
-		\vec{P}_4 = \myvec{\vec{e}_4^{1} &\vec{e}_4^{3} &\vec{e}_4^{2} &\vec{e}_4^{4}}
-	\end{align}
-	\item The 4 point {\em DFT diagonal matrix} is defined as 
-	\begin{align}
-		\vec{D}_4 = diag\myvec{W_{N}^{0} & W_{N}^{1} & W_{N}^{2} & W_{N}^{3}}
-	\end{align}
-\end{enumerate}
-\subsection{Problems}
-\begin{enumerate}[label=\arabic*.,ref=\thesection.\theenumi]
-	\numberwithin{equation}{section}
-	\item Show that 
-	\begin{equation}
-		W_{N}^{2}=W_{N/2}
-	\end{equation}
-	\begin{align}
-			W_{N} = e^{-j2\pi/N}\\
-			\implies W_{N/2} = e^{-j2\pi/(N/2)}\\
-			W_{N}^{2} = e^{2 (-j2\pi/N)} = e^{-j2\pi/(N/2)} = W_{N/2}\\
-	\end{align}
-	\item Find $\vec{P}_6$.\\
-	\solution\\
-	\begin{align}
-		\vec{P}_{6} = \myvec{\vec{e}_6^{1} &\vec{e}_6^{3} &\vec{e}_6^{5} &\vec{e}_6^{2}
-			&\vec{e}_6^{4} &\vec{e}_6^{6}}
-	\end{align}
-	
-	\item Find $\vec{D}_3$.\\
-	\solution 	
-	\begin{align}
-		\vec{D}_3 = diag\myvec{W_{3}^{0} & W_{3}^{1} & W_{3}^{2}}
-	\end{align}
-	\item Show that 
-	\begin{equation}
-		\vec{F}_{6}=
-		\begin{bmatrix}
-			\vec{I}_{3} & \vec{D}_{3} \\
-			\vec{I}_{3} & -\vec{D}_{3}
-		\end{bmatrix}
-		\begin{bmatrix}
-			\vec{F}_{3} & 0 \\
-			0 & \vec{F}_{3}
-		\end{bmatrix}
-		\vec{P}_{3}
-	\end{equation}
-	\item Show that 
-	\begin{equation}
-		\vec{F}_{N}=
-		\begin{bmatrix}
-			\vec{I}_{N/2} & \vec{D}_{N/2} \\
-			\vec{I}_{N/2} & -\vec{D}_{N/2}
-		\end{bmatrix}
-		\begin{bmatrix}
-			\vec{F}_{N/2} & 0 \\
-			0 & \vec{F}_{N/2}
-		\end{bmatrix}
-		\vec{P}_{N}
-	\end{equation}
+\begin{align}
+	X(k) \triangleq \sum_{n=0}^{N-1} x(n) e^{-j 2 \pi k n / N}, \quad k=0,1, \ldots, N-1
+\end{align}
+\item Let 
+\begin{align}
+	W_{N} = e^{-j2\pi/N} 
+\end{align}
+Then the $N$-point {\em DFT matrix} is defined as 
+\begin{align}
+	\vec{F}_{N} = \sbrak{W_{N}^{mn}}, \quad 0 \le m,n \le N-1 
+\end{align}
+where $W_{N}^{mn}$ are the elements of $\vec{F}_{N}$.
+\item Let 
+\begin{align}
+	\vec{I}_4 = \myvec{\vec{e}_4^{1} &\vec{e}_4^{2} &\vec{e}_4^{3} &\vec{e}_4^{4} }
+\end{align}
+be the $4\times 4$ identity matrix.  Then the 4 point {\em DFT permutation matrix} is defined as 
+\begin{align}
+	\vec{P}_4 = \myvec{\vec{e}_4^{1} &\vec{e}_4^{3} &\vec{e}_4^{2} &\vec{e}_4^{4} }
+\end{align}
+\item The 4 point {\em DFT diagonal matrix} is defined as 
+\begin{align}
+	\vec{D}_4 = diag\myvec{W_{8}^{0} & W_{8}^{1} & W_{8}^{2} & W_{8}^{3}}
+\end{align}
+\item Show that 
+\begin{equation}
+	W_{N}^{2}=W_{N/2}
+\end{equation}
+\solution\begin{align}
+	W_{N} = e^{-j2\pi/N}\\
+	\implies W_{N/2} = e^{-j2\pi/(N/2)}\\
+	\therefore W_{N}^{2} = e^{2 (-j2\pi/N)} = e^{-j2\pi/(N/2)} = W_{N/2}
+\end{align}
+%    \item Find $\vec{P}_6$.
+%    \item Find $\vec{D}_3$.
+\item Show that 
+\begin{equation}
+	\vec{F}_{4}=
+	\begin{bmatrix}
+		\vec{I}_{2} & \vec{D}_{2} \\
+		\vec{I}_{2} & -\vec{D}_{2}
+	\end{bmatrix}
+	\begin{bmatrix}
+		\vec{F}_{2} & 0 \\
+		0 & \vec{F}_{2}
+	\end{bmatrix}
+	\vec{P}_{4}
+\end{equation}
 \solution
 \begin{align}
-		\vec{F}_N = 
-		\begin{bmatrix}
-				\vec{F}_{N/2} & \vec{D}_{N/2} \vec{F}_{N/2}\\
-				\vec{F}_{N/2} & -\vec{D}_{N/2} \vec{F}_{N/2}\\
-		\end{bmatrix}
+%	\vec{F}_{4}=
+	\vec{F}_{2} = 
+	\begin{bmatrix}
+		W_{2}^0	&	W_{2}^0\\
+		W_{2}^0	&	W_{2}^1
+	\end{bmatrix}
+	=		\begin{bmatrix}
+		1	&	1\\
+		1	&	-1
+	\end{bmatrix}\\
+	\vec{D}_2 = diag\myvec{W_2^0 & W_2^1} = 
+	\begin{bmatrix}
+		W_2^0 &	0\\
+		0	&	W_2^1 
+	\end{bmatrix}\\
+\text{R.H.S } = 
+\begin{bmatrix}
+	\vec{F}_{2} & \vec{D}_{2} \vec{F}_{2}\\
+	\vec{F}_{2} & -\vec{D}_{2} \vec{F}_{2}\\
+\end{bmatrix}\\
+	=\begin{bmatrix}
+		W_{2}^0	&	W_{2}^0	&	(W_{2}^0)^2	&	(W_{2}^0)^2\\
+		W_{2}^0	&	W_{2}^1	&	W_{2}^0 W_{2}^1	&	W_{2}^0 W_{2}^1\\
+		W_{2}^0	&	W_{2}^0	&	-(W_{2}^0)^2	&	-(W_{2}^0)^2\\
+		W_{2}^0	&	W_{2}^1	&	-W_{2}^0 W_{2}^1	&	-W_{2}^0 W_{2}^1\\
+	\end{bmatrix}\\
+		=\frac{1}{\sqrt{2}}\begin{bmatrix}
+		1	&	1	&	1	&	1\\
+		1	&	-1	&	1	&	1\\
+		1	&	1	&	-1	&	-1\\
+		1	&	-1	&	1	&	1\\
+	\end{bmatrix}\\
+	=\begin{bmatrix}
+		W_{4}^0	&	W_{4}^0	&	W_{4}^0	&	W_{4}^0\\
+		W_{4}^0	&	W_{4}^1	&	W_{4}^2	&	W_{4}^3\\
+		W_{4}^0	&	W_{4}^2	&	W_{4}^4	&	W_{4}^6\\
+		W_{4}^0	&	W_{4}^3	&	W_{4}^6	&	W_{4}^9\\
+	\end{bmatrix} = \vec{F}_{4}
+\end{align}
+\item Show that 
+\begin{equation}
+	\vec{F}_{N}=
+	\begin{bmatrix}
+		\vec{I}_{N/2} & \vec{D}_{N/2} \\
+		\vec{I}_{N/2} & -\vec{D}_{N/2}
+	\end{bmatrix}
+	\begin{bmatrix}
+		\vec{F}_{N/2} & 0 \\
+		0 & \vec{F}_{N/2}
+	\end{bmatrix}
+	\vec{P}_{N}
+\end{equation}
+\item Find 
+\begin{align}
+	\vec{P}_4 \vec{x}
+\end{align}
+	\solution
+\begin{align}
+	\vec{P}_{4} = \myvec{\vec{e}_4^{1} &\vec{e}_4^{3} &\vec{e}_4^{2}	&\vec{e}_4^{4}}\\
+	\vec{x}_4 = \myvec{1 & 2 & 3 & 4} & 2 & 1 & \text{\small ignored}\\
+	\vec{P}_{4}	\vec{x} = \myvec{1 & 3 & 2 & 4}
 \end{align}
 
-	\item Find 
-	\begin{align}
-		\vec{P}_6 \vec{x}
-	\end{align}
-	\solution\\
-	\begin{align}
-		\vec{P}_{6} = \myvec{\vec{e}_6^{1} &\vec{e}_6^{3} &\vec{e}_6^{5} &\vec{e}_6^{2}
-	&\vec{e}_6^{4} &\vec{e}_6^{6}}\\
-		\text{From}\eqref{def:xn}: \quad \vec{x} = \cbrak{1,2,3,4,2,1}\\
-		\vec{P}_6 \vec{x} = \myvec{1,3,2,2,4,1}
-	\end{align}
-	\item Show that 
-	\begin{align}
-		\vec{X} = \vec{F}_N \vec{x}
-		\label{eq:dft-mat-def}
-	\end{align}
-	where $\vec{x}, \vec{X}$ are the vector representations of $x(n), X(k)$ respectively.
-	\item 
-	Let 
-	\begin{equation}
-		\myvec{
-			X_{1}(0) \\ 
-			X_{1}(1) \\ 
-			X_{1}(2) 
-		}
-		= F_{3}
-		\myvec{
-			x(0) \\ 
-			x(2) \\ 
-			x(4) 
-		}
-	\end{equation}
-	\begin{equation}
-		\myvec{
-			X_{2}(0) \\ 
-			X_{2}(1) \\ 
-			X_{2}(2) 
-		}
-		= F_{3}
-		\myvec{
-			x(1) \\ 
-			x(3) \\ 
-			x(5) 
-		}
-	\end{equation}
-	Show that 
-	\begin{equation}
-		\myvec{
-			X(0) \\ 
-			X(1) \\ 
-			X(2)  
-		}
-		=
-		\myvec{
-			X_{1}(0) \\ 
-			X_{1}(1)\\ 
-			X_{1}(2)
-		}
-		+
-		\myvec{
-			W^{0}_{6} & 0 & 0\\
-			0 & W^{1}_{6} & 0\\
-			0 & 0 & W^{2}_{6}\\
-		}
-		\myvec{
-			X_{2}(0) \\ 
-			X_{2}(1) \\ 
-			X_{2}(2)
-		}
-	\end{equation}
-	\begin{equation}
-		\myvec{
-			X(3) \\ 
-			X(4) \\ 
-			X(5) 
-		}
-		=
-		\myvec{
-			X_{1}(0) \\ 
-			X_{1}(1)\\ 
-			X_{1}(2)
-		}
-		-
-		\myvec{
-			W^{0}_{6} & 0 & 0\\
-			0 & W^{1}_{6} & 0\\
-			0 & 0 & W^{2}_{6}
-		}
-		\myvec{
-			X_{2}(0) \\ 
-			X_{2}(1) \\ 
-			X_{2}(2)
-		}
-		\label{eq:fft-mat-def}
-	\end{equation}
-	\item For 
-	\begin{align}
-		\vec{x} = \myvec{1\\2\\3\\4\\2\\1}
-		\label{eq:equation1}
-	\end{align}
-	compte the DFT using 
-	\eqref{eq:dft-mat-def}
-	\item Repeat the above exercise using
-	\eqref{eq:fft-mat-def}
-	\item Write a C program to compute the 8-point FFT. 
+\item Show that 
+\begin{align}
+	\vec{X} = \vec{F}_N \vec{x}
+	\label{eq:dft-mat-def}
+\end{align}
+where $\vec{x}, \vec{X}$ are the vector representations of $x(n), X(k)$ respectively.
+\solution
+
+\item Derive the following Step-by-step visualisation  of
+8-point FFTs into 4-point FFTs and so on
+\begin{equation}
+	\begin{bmatrix}
+		X(0) \\ 
+		X(1) \\ 
+		X(2) \\ 
+		X(3)
+	\end{bmatrix}
+	=
+	\begin{bmatrix}
+		X_{1}(0) \\ 
+		X_{1}(1)\\ 
+		X_{1}(2)\\
+		X_{1}(3)\\
+	\end{bmatrix}
+	+
+	\begin{bmatrix}
+		W^{0}_{8} & 0 & 0 & 0\\
+		0 & W^{1}_{8} & 0 & 0\\
+		0 & 0 & W^{2}_{8} & 0\\
+		0 & 0 & 0 & W^{3}_{8}
+	\end{bmatrix}
+	\begin{bmatrix}
+		X_{2}(0) \\ 
+		X_{2}(1) \\ 
+		X_{2}(2) \\
+		X_{2}(3)
+	\end{bmatrix}
+\end{equation}
+\begin{equation}
+	\begin{bmatrix}
+		X(4) \\ 
+		X(5) \\ 
+		X(6) \\ 
+		X(7)
+	\end{bmatrix}
+	=
+	\begin{bmatrix}
+		X_{1}(0) \\ 
+		X_{1}(1)\\ 
+		X_{1}(2)\\
+		X_{1}(3)\\
+	\end{bmatrix}
+	-
+	\begin{bmatrix}
+		W^{0}_{8} & 0 & 0 & 0\\
+		0 & W^{1}_{8} & 0 & 0\\
+		0 & 0 & W^{2}_{8} & 0\\
+		0 & 0 & 0 & W^{3}_{8}
+	\end{bmatrix}
+	\begin{bmatrix}
+		X_{2}(0) \\ 
+		X_{2}(1) \\ 
+		X_{2}(2) \\
+		X_{2}(3)
+	\end{bmatrix}
+\end{equation}
+4-point FFTs into 2-point FFTs
+\begin{equation}
+	\begin{bmatrix}
+		X_{1}(0) \\ 
+		X_{1}(1)\\ 
+	\end{bmatrix}
+	=
+	\begin{bmatrix}
+		X_{3}(0) \\ 
+		X_{3}(1)\\ 
+	\end{bmatrix}
+	+
+	\begin{bmatrix}
+		W^{0}_{4} & 0\\
+		0 & W^{1}_{4}
+	\end{bmatrix}
+	\begin{bmatrix}
+		X_{4}(0) \\ 
+		X_{4}(1) \\ 
+	\end{bmatrix}
+\end{equation}
+\begin{equation}
+	\begin{bmatrix}
+		X_{1}(2) \\ 
+		X_{1}(3)\\ 
+	\end{bmatrix}
+	=
+	\begin{bmatrix}
+		X_{3}(0) \\ 
+		X_{3}(1)\\ 
+	\end{bmatrix}
+	-
+	\begin{bmatrix}
+		W^{0}_{4} & 0\\
+		0 & W^{1}_{4}
+	\end{bmatrix}
+	\begin{bmatrix}
+		X_{4}(0) \\ 
+		X_{4}(1) \\ 
+	\end{bmatrix}
+\end{equation}
+\begin{equation}
+	\begin{bmatrix}
+		X_{2}(0) \\ 
+		X_{2}(1)\\ 
+	\end{bmatrix}
+	=
+	\begin{bmatrix}
+		X_{5}(0) \\ 
+		X_{5}(1)\\ 
+	\end{bmatrix}
+	+
+	\begin{bmatrix}
+		W^{0}_{4} & 0\\
+		0 & W^{1}_{4}
+	\end{bmatrix}
+	\begin{bmatrix}
+		X_{6}(0) \\ 
+		X_{6}(1) \\ 
+	\end{bmatrix}
+\end{equation}
+\begin{equation}
+	\begin{bmatrix}
+		X_{2}(2) \\ 
+		X_{2}(3)\\ 
+	\end{bmatrix}
+	=
+	\begin{bmatrix}
+		X_{5}(0) \\ 
+		X_{5}(1)\\ 
+	\end{bmatrix}
+	-
+	\begin{bmatrix}
+		W^{0}_{4} & 0\\
+		0 & W^{1}_{4}
+	\end{bmatrix}
+	\begin{bmatrix}
+		X_{6}(0) \\ 
+		X_{6}(1) \\ 
+	\end{bmatrix}
+\end{equation}
+\begin{equation}
+	P_{8}
+	\begin{bmatrix}
+		x(0) \\ 
+		x(1) \\ 
+		x(2) \\ 
+		x(3) \\ 
+		x(4) \\ 
+		x(5) \\
+		x(6) \\
+		x(7)
+	\end{bmatrix}
+	= 
+	\begin{bmatrix}
+		x(0) \\ 
+		x(2) \\ 
+		x(4) \\ 
+		x(6) \\
+		x(1) \\ 
+		x(3) \\ 
+		x(5) \\
+		x(7)
+	\end{bmatrix}
+\end{equation}
+\begin{equation}
+	P_{4}
+	\begin{bmatrix}
+		x(0) \\ 
+		x(2) \\ 
+		x(4) \\ 
+		x(6) \\
+	\end{bmatrix}
+	= 
+	\begin{bmatrix}
+		x(0) \\ 
+		x(4) \\ 
+		x(2) \\
+		x(6)
+	\end{bmatrix}
+\end{equation}
+\begin{equation}
+	P_{4}
+	\begin{bmatrix}
+		x(1) \\ 
+		x(3) \\ 
+		x(5) \\
+		x(7)
+	\end{bmatrix}
+	= 
+	\begin{bmatrix}
+		x(1) \\ 
+		x(5) \\ 
+		x(3) \\ 
+		x(7) \\
+	\end{bmatrix}
+\end{equation}
+Therefore,
+\begin{equation}
+	\begin{bmatrix}
+		X_{3}(0) \\ 
+		X_{3}(1)\\ 
+	\end{bmatrix}
+	= F_{2}
+	\begin{bmatrix}
+		x(0) \\ 
+		x(4) \\ 
+	\end{bmatrix}
+\end{equation}
+\begin{equation}
+	\begin{bmatrix}
+		X_{4}(0) \\ 
+		X_{4}(1)\\ 
+	\end{bmatrix}
+	= F_{2}
+	\begin{bmatrix}
+		x(2) \\ 
+		x(6) \\ 
+	\end{bmatrix}
+\end{equation}
+\begin{equation}
+	\begin{bmatrix}
+		X_{5}(0) \\ 
+		X_{5}(1)\\ 
+	\end{bmatrix}
+	= F_{2}
+	\begin{bmatrix}
+		x(1) \\ 
+		x(5) \\ 
+	\end{bmatrix}
+\end{equation}
+\begin{equation}
+	\begin{bmatrix}
+		X_{6}(0) \\ 
+		X_{6}(1)\\ 
+	\end{bmatrix}
+	= F_{2}
+	\begin{bmatrix}
+		x(3) \\ 
+		x(7) \\ 
+	\end{bmatrix}
+\end{equation}
+\item For 
+\begin{align}
+	\vec{x} = \myvec{1\\2\\3\\4\\2\\1}
+	\label{eq:equation1}
+\end{align}
+compte the DFT  
+using 
+\eqref{eq:dft-mat-def}\\
+\solution
+\begin{align}
+	\vec{X} = \vec{F}_6 \vec{x}
+\end{align}	
+\begin{align}
+	= \begin{bsmallmatrix}
+		1	&	1	&	1	&	1	&	1	&	1\\
+		1	&	\brak{e^{\frac{-j2\pi}{6}}}	&	\brak{e^{\frac{-j2\pi}{6}}}^2	&	\brak{e^{\frac{-j2\pi}{6}}}^3	&	\brak{e^{\frac{-j2\pi}{6}}}^4	&	\brak{e^{\frac{-j2\pi}{6}}}^5\\
+		1	&	\brak{e^{\frac{-j2\pi}{6}}}^2	&	\brak{e^{\frac{-j2\pi}{6}}}^4	&	\brak{e^{\frac{-j2\pi}{6}}}^6	&	\brak{e^{\frac{-j2\pi}{6}}}^8	&	\brak{e^{\frac{-j2\pi}{6}}}^{10}\\
+		1	&	\brak{e^{\frac{-j2\pi}{6}}}^3	&	\brak{e^{\frac{-j2\pi}{6}}}^6	&	\brak{e^{\frac{-j2\pi}{6}}}^9	&	\brak{e^{\frac{-j2\pi}{6}}}^{12}	&	\brak{e^{\frac{-j2\pi}{6}}}^{15}\\
+		1	&	\brak{e^{\frac{-j2\pi}{6}}}^4	&	\brak{e^{\frac{-j2\pi}{6}}}^8	&	\brak{e^{\frac{-j2\pi}{6}}}^{12}	&	\brak{e^{\frac{-j2\pi}{6}}}^{16}	&	\brak{e^{\frac{-j2\pi}{6}}}^{20}\\
+		1	&	\brak{e^{\frac{-j2\pi}{6}}}^5	&	\brak{e^{\frac{-j2\pi}{6}}}^{10}	&	\brak{e^{\frac{-j2\pi}{6}}}^{15}	&	\brak{e^{\frac{-j2\pi}{6}}}^{20}	&	\brak{e^{\frac{-j2\pi}{6}}}^{25}
+	\end{bsmallmatrix}
+	\myvec{1\\2\\3\\4\\2\\1}\\
+	=\myvec{13\\}
+\end{align}
+
+
+
+\item Repeat the above exercise using the FFT
+after zero padding $\vec{x}$.
+%	    \eqref{eq:fft-mat-def}
+\item Write a C program to compute the 8-point FFT. 
 \end{enumerate}
 \section{Exercises}
 Answer the following questions by looking at the python code in Problem \ref{prob:output}.
 \begin{enumerate}[label=\thesection.\arabic*]
-	\item
-	The command
-	\begin{lstlisting}
-output_signal = signal.lfilter(b, a, input_signal)
-	\end{lstlisting}
-	in Problem \ref{prob:output} is executed through the following difference equation
-	\begin{equation}
-		\label{eq:iir_filter_gen}
-		\sum _{m=0}^{M}a\brak{m}y\brak{n-m}=\sum _{k=0}^{N}b\brak{k}x\brak{n-k}
-	\end{equation}
-	%
-	where the input signal is $x(n)$ and the output signal is $y(n)$ with initial values all 0. Replace
-	\textbf{signal.filtfilt} with your own routine and verify.
-	%
-	\item Repeat all the exercises in the previous sections for the above $a$ and $b$.
-	\item What is the sampling frequency of the input signal?
-	\\
-	\solution
-	Sampling frequency(fs)=44.1kHZ.
-	\item
-	What is type, order and  cutoff-frequency of the above butterworth filter
-	\\
-	\solution
-	The given butterworth filter is low pass with order=2 and cutoff-frequency=4kHz.
-	%
-	\item
-	Modifying the code with different input parameters and to get the best possible output.
-	%
+\item
+The command
+\begin{lstlisting}
+	output_signal = signal.lfilter(b, a, input_signal)
+\end{lstlisting}
+in Problem \ref{prob:output} is executed through the following difference equation
+\begin{equation}
+	\label{eq:iir_filter_gen}
+	\sum _{m=0}^{M}a\brak{m}y\brak{n-m}=\sum _{k=0}^{N}b\brak{k}x\brak{n-k}
+\end{equation}
+%
+where the input signal is $x(n)$ and the output signal is $y(n)$ with initial values all 0. Replace
+\textbf{signal.filtfilt} with your own routine and verify.
+%
+\item Repeat all the exercises in the previous sections for the above $a$ and $b$.
+\item What is the sampling frequency of the input signal?
+\\
+\solution
+Sampling frequency(fs)=44.1kHZ.
+\item
+What is type, order and  cutoff-frequency of the above butterworth filter
+\\
+\solution
+The given butterworth filter is low pass with order=2 and cutoff-frequency=4kHz.
+%
+\item
+Modifying the code with different input parameters and to get the best possible output.
+%
 \end{enumerate}
 \end{document}
 
