--- a/Assignment 1/filter/main.tex
+++ b/Assignment 1/filter/main.tex
@@ -796,7 +796,7 @@ be the $4\times 4$ identity matrix.  Then the 4 point {\em DFT permutation matri
 \end{align}
 \item The 4 point {\em DFT diagonal matrix} is defined as 
 \begin{align}
-	\vec{D}_4 = diag\myvec{W_{8}^{0} & W_{8}^{1} & W_{8}^{2} & W_{8}^{3}}
+	\vec{D}_4 = diag\myvec{W_{4}^{0} & W_{4}^{1} & W_{4}^{2} & W_{4}^{3}}
 \end{align}
 \item Show that 
 \begin{equation}
@@ -834,34 +834,44 @@ be the $4\times 4$ identity matrix.  Then the 4 point {\em DFT permutation matri
 		1	&	1\\
 		1	&	-1
 	\end{bmatrix}\\
-	\vec{D}_2 = diag\myvec{W_2^0 & W_2^1} = 
+	\vec{D}_2 =
 	\begin{bmatrix}
 		W_2^0 &	0\\
 		0	&	W_2^1 
+	\end{bmatrix}
+	=\begin{bmatrix}
+		1	&	0\\
+		0	&	-1 
 	\end{bmatrix}\\
 \text{R.H.S } = 
 \begin{bmatrix}
 	\vec{F}_{2} & \vec{D}_{2} \vec{F}_{2}\\
 	\vec{F}_{2} & -\vec{D}_{2} \vec{F}_{2}\\
-\end{bmatrix}\\
+\end{bmatrix}\vec{P}_{4}\\
 	=\begin{bmatrix}
 		W_{2}^0	&	W_{2}^0	&	(W_{2}^0)^2	&	(W_{2}^0)^2\\
-		W_{2}^0	&	W_{2}^1	&	W_{2}^0 W_{2}^1	&	W_{2}^0 W_{2}^1\\
+		W_{2}^0	&	W_{2}^1	&	W_{2}^0 W_{2}^1	&	(W_{2}^1)^2\\
 		W_{2}^0	&	W_{2}^0	&	-(W_{2}^0)^2	&	-(W_{2}^0)^2\\
-		W_{2}^0	&	W_{2}^1	&	-W_{2}^0 W_{2}^1	&	-W_{2}^0 W_{2}^1\\
-	\end{bmatrix}\\
+		W_{2}^0	&	W_{2}^1	&	-W_{2}^0 W_{2}^1	&	-(W_{2}^1)^2\\
+	\end{bmatrix}\vec{P}_{4}\\
 		=\frac{1}{\sqrt{2}}\begin{bmatrix}
 		1	&	1	&	1	&	1\\
-		1	&	-1	&	1	&	1\\
+		1	&	-1	&	-1	&	1\\
 		1	&	1	&	-1	&	-1\\
-		1	&	-1	&	1	&	1\\
-	\end{bmatrix}\\
-	=\begin{bmatrix}
+		1	&	-1	&	1	&	-1\\
+	\end{bmatrix}\vec{P}_{4}\\
+		=\frac{1}{\sqrt{2}}\begin{bmatrix}
+			1	&	1	&	1	&	1\\
+			1	&	-1	&	-1	&	1\\
+			1	&	-1	&	1	&	-1\\
+			1	&	1	&	-1	&	-21\\
+		\end{bmatrix}\\
+	= Re\begin{bmatrix}
 		W_{4}^0	&	W_{4}^0	&	W_{4}^0	&	W_{4}^0\\
 		W_{4}^0	&	W_{4}^1	&	W_{4}^2	&	W_{4}^3\\
 		W_{4}^0	&	W_{4}^2	&	W_{4}^4	&	W_{4}^6\\
 		W_{4}^0	&	W_{4}^3	&	W_{4}^6	&	W_{4}^9\\
-	\end{bmatrix} = \vec{F}_{4}
+	\end{bmatrix} = Re(\vec{F}_{4})
 \end{align}
 \item Show that 
 \begin{equation}
@@ -883,7 +893,7 @@ be the $4\times 4$ identity matrix.  Then the 4 point {\em DFT permutation matri
 	\solution
 \begin{align}
 	\vec{P}_{4} = \myvec{\vec{e}_4^{1} &\vec{e}_4^{3} &\vec{e}_4^{2}	&\vec{e}_4^{4}}\\
-	\vec{x}_4 = \myvec{1 & 2 & 3 & 4} & 2 & 1 & \text{\small ignored}\\
+	\vec{x}_4 = \myvec{1 & 2 & 3 & 4}\\% & 2 & 1 & \text{\small ignored}\\
 	\vec{P}_{4}	\vec{x} = \myvec{1 & 3 & 2 & 4}
 \end{align}
 
@@ -892,8 +902,13 @@ be the $4\times 4$ identity matrix.  Then the 4 point {\em DFT permutation matri
 	\vec{X} = \vec{F}_N \vec{x}
 	\label{eq:dft-mat-def}
 \end{align}
-where $\vec{x}, \vec{X}$ are the vector representations of $x(n), X(k)$ respectively.
+where $\vec{x}, \vec{X}$ are the vector representations of $x(n), X(k)$ respectively.\\
 \solution
+\begin{align}
+	\brak{\vec{F}_{N}\vec{x}}_{k} = \sum_{m=0}^{N-1}W_{N}^{mk}x(m)\\
+	 = \sum_{m=0}^{N-1} x(m) e^{-j 2 \pi k m / N}
+	 = X(k) = \vec{X}_{k} 
+\end{align}
 
 \item Derive the following Step-by-step visualisation  of
 8-point FFTs into 4-point FFTs and so on
@@ -1156,16 +1171,52 @@ using
 		1	&	\brak{e^{\frac{-j2\pi}{6}}}^4	&	\brak{e^{\frac{-j2\pi}{6}}}^8	&	\brak{e^{\frac{-j2\pi}{6}}}^{12}	&	\brak{e^{\frac{-j2\pi}{6}}}^{16}	&	\brak{e^{\frac{-j2\pi}{6}}}^{20}\\
 		1	&	\brak{e^{\frac{-j2\pi}{6}}}^5	&	\brak{e^{\frac{-j2\pi}{6}}}^{10}	&	\brak{e^{\frac{-j2\pi}{6}}}^{15}	&	\brak{e^{\frac{-j2\pi}{6}}}^{20}	&	\brak{e^{\frac{-j2\pi}{6}}}^{25}
 	\end{bsmallmatrix}
-	\myvec{1\\2\\3\\4\\2\\1}\\
-	=\myvec{13\\}
+	\myvec{1\\2\\3\\4\\2\\1}
+\end{align}
+\begin{align}
+	=\myvec{13\\-4 - \sqrt{3}j\\ 1\\-1\\1\\-4 + \sqrt{3}j}
 \end{align}
 
 
 
+
+
 \item Repeat the above exercise using the FFT
-after zero padding $\vec{x}$.
+after zero padding $\vec{x}$.\\
+
+\solution
+
+\begin{lstlisting}
+		
+\end{lstlisting}
+
+From the above code we get this output:
+\begin{bmatrix}
+	(13+0j)\\
+	(-3.1213-6.5355j)\\
+	(-0+1j)\\
+	(1.1213-0.5355j)\\
+	(-1-0j)\\
+	(1.1213+0.5355j)\\
+	-1j\\
+	(-3.1213+6.5355j)
+\end{bmatrix}
+
 %	    \eqref{eq:fft-mat-def}
-\item Write a C program to compute the 8-point FFT. 
+\item Write a C program to compute the 8-point FFT. \\
+\solution
+
+From the above code we get this output:
+\begin{bmatrix}
+	(13.0000) + j(0.0000)\\
+	(-3.1327) + j(-6.5545)\\
+	(0.0000) + j(1.0000)\\
+	(1.1327) + j(-0.5545)\\
+	(-1.0000) + j(0.0000)\\
+	(1.1327) + j(0.5545)\\
+	(0.0000) + j(-1.0000)\\
+	(-3.1327) + j(6.5545)
+\end{bmatrix}
 \end{enumerate}
 \section{Exercises}
 Answer the following questions by looking at the python code in Problem \ref{prob:output}.
