--- a/Assignment 1/filter/main.tex
+++ b/Assignment 1/filter/main.tex
@@ -1245,7 +1245,7 @@ where the input signal is $x(n)$ and the output signal is $y(n)$ with initial va
 \textbf{signal.filtfilt} with your own routine and verify.\\
 \solution
 \begin{lstlisting}
-wget
+wget	https://github.com/DarkWake9/EE3900/blob/main/Assignment%201/e8.1.py
 \end{lstlisting}
 \item Repeat all the exercises in the previous sections for the above $a$ and $b$.
 \item What is the sampling frequency of the input signal?
