--- a/Assignment 1/filter/main.tex
+++ b/Assignment 1/filter/main.tex
@@ -885,6 +885,112 @@ be the $4\times 4$ identity matrix.  Then the 4 point {\em DFT permutation matri
 	\end{bmatrix}
 	\vec{P}_{N}
 \end{equation}
+\solution
+\begin{align}
+	\vec{F}_N = \begin{bmatrix}
+		W_{N}^{00}	& \cdots & W_{N}^{0(N-1)}\\
+		\vdots & & \vdots\\
+		W_{N}^{(N-1)0}	& \cdots & W_{N}^{(N-1)(N-1)}\\
+	\end{bmatrix}
+\end{align}
+Take Even - Odd permutation. i.e, multiply with $\vec{P}_N$
+\begin{align}
+	\vec{F}_N \vec{P}_N  = \begin{bsmallmatrix}
+		W_{N}^{00}	&	W_{N}^{02}	&	\cdots	&	\cdots	&	W_{N}^{01}	&	W_{N}^{03}	& \cdots\\
+		\vdots	&&&&	\vdots\\
+		W_{N}^{(N-1)0}	&	W_{N}^{(N-1)2}	&	\cdots	&	\cdots	&	W_{N}^{(N-1)1}	&	W_{N}^{(N-1)3}	& \cdots
+	\end{bsmallmatrix}
+\end{align}
+abcd\\
+\begin{align}
+	=\begin{bsmallmatrix}
+		\brak{W_{N}^{0}}^{0}	&	\brak{W_{N}^{0}}^{2}	&	\cdots	&	W_{N}^1\brak{W_{N}^{0}}^{0}	&	W_{N}^1\brak{W_{N}^{0}}^{2}	&	\cdots\\
+		\vdots	&&& \vdots\\
+		\brak{W_{N}^{N-1}}^{0}	&	\brak{W_{N}^{N-1}}^{2}	&	\cdots	&	W_{N}^{N-1}\brak{W_{N}^{N-1}}^{0}	&	W_{N/2}^{N-1}\brak{W_{N}^{N-1}}^{2}	&	\cdots\\
+	\end{bsmallmatrix}\\
+	=\begin{bsmallmatrix}
+		\brak{W_{N/2}^{0}}^{0}	&	\brak{W_{N/2}^{0}}^{1}	&	\cdots	&	W_{N}^1\brak{W_{N/2}^{0}}^{0}	&	W_{N/2+1}^1\brak{W_{N/2}^{0}}^{1}	&	\cdots\\
+		\vdots	&&& \vdots\\
+		\brak{W_{N}^{N-1}}^{0}	&	\brak{W_{N}^{N-1}}^{2}	&	\cdots	&	W_{N}^{N-1}\brak{W_{N/2}^{N-1}}^{0}	&	W_{N}^{N-1}\brak{W_{N/2}^{N-1}}^{1}	&	\cdots		
+	\end{bsmallmatrix}
+\end{align}
+\begin{align}
+	\begin{bsmallmatrix}
+		\brak{W_{N/2}^{0}}^{0}	&	\brak{W_{N/2}^{0}}^{1}	&	\cdots	&	W_{N/2}^0\brak{W_{N/2}^{0}}^{0}	&	W_{N/2}^0\brak{W_{N/2}^{0}}^{1}	&	\cdots\\
+		\vdots	&&& \vdots\\
+		\brak{W_{N/2}^{N/2 - 1}}^{0}	&	\brak{W_{N/2}^{N/2 - 1}}^{1}	&	\cdots	&	W_{N}^{N/2-1}\brak{W_{N/2}^{N/2 + 1}}^{0}	&	W_{N}^{N/2-1}\brak{W_{N/2}^{N/2 -1}}^{1}	&	\cdots\\
+		\brak{W_{N/2}^{N/2 + 0}}^{0}	&	\brak{W_{N/2}^{N/2 + 0}}^{1}	&	\cdots	&	W_{N}^{N/2 + 0}\brak{W_{N/2}^{N/2 + 0}}^{0}	&	W_{N}^{N/2}\brak{W_{N/2}^{N/2+0}}^{1}	&	\cdots\\
+		\vdots	&&& \vdots\\
+		\brak{W_{N}^{N-1}}^{0}	&	\brak{W_{N}^{N-1}}^{2}	&	\cdots	&	W_{N}^{N/2 + (N/2-1)}\brak{W_{N/2}^{N-1}}^{0}	&	W_{N/2 + (N/2-1)}^{N-1}\brak{W_{N/2}^{N-1}}^{1}	&	\cdots
+	\end{bsmallmatrix}
+\end{align}
+\begin{align}
+		W_{N}^{N/2+k} = -W_{N}^{k}\\
+		W_{N/2}^{N/2+k} = W_{N/2}^{k}
+\end{align}
+\begin{align}
+	\begin{bsmallmatrix}
+		\brak{W_{N/2}^{0}}^{0}	&	\brak{W_{N/2}^{0}}^{1}	&	\cdots	&	W_{N/2}^0\brak{W_{N/2}^{0}}^{0}	&	W_{N/2}^0\brak{W_{N/2}^{0}}^{1}	&	\cdots\\
+		\vdots	&&& \vdots\\
+		\brak{W_{N/2}^{N/2 - 1}}^{0}	&	\brak{W_{N/2}^{N/2 - 1}}^{1}	&	\cdots	&	W_{N}^{N/2-1}\brak{W_{N/2}^{N/2 + 1}}^{0}	&	W_{N}^{N/2-1}\brak{W_{N/2}^{N/2 -1}}^{1}	&	\cdots\\
+		\brak{W_{N/2}^{0}}^{0}	&	\brak{W_{N/2}^{0}}^{1}	&	\cdots	&	-W_{N}^{0}\brak{W_{N/2}^{0}}^{0}	&	-W_{N}^{0}\brak{W_{N/2}^{0}}^{1}	&	\cdots\\
+		\vdots	&&& \vdots\\
+		\brak{W_{N}^{N-1}}^{0}	&	\brak{W_{N}^{N-1}}^{2}	&	\cdots	&	-W_{N}^{ N/2-1}\brak{W_{N/2}^{N/2-1}}^{0}	&	-W_{(N/2-1)}^{N-1}\brak{W_{N/2}^{N/2-1}}^{1}	&	\cdots
+	\end{bsmallmatrix}\\
+	\begin{bsmallmatrix}
+		\begin{bsmallmatrix}
+			\brak{W_{N/2}^{0}}^{0}	&	\brak{W_{N/2}^{0}}^{1} 	&	\cdots\\
+					\vdots	& \vdots\\
+			\brak{W_{N/2}^{N/2 - 1}}^{0}	&	\brak{W_{N/2}^{N/2 - 1}}^{1}	&	\cdots	
+		\end{bsmallmatrix} & 
+		\begin{bsmallmatrix}
+			W_{N/2}^0\brak{W_{N/2}^{0}}^{0}	&	W_{N/2}^0\brak{W_{N/2}^{0}}^{1}	&	\cdots\\
+					\vdots	& \vdots\\
+			W_{N}^{N/2-1}\brak{W_{N/2}^{N/2 - 1}}^{0}	&	W_{N}^{N/2-1}\brak{W_{N/2}^{N/2 -1}}^{1}	&	\cdots\\
+		\end{bsmallmatrix}\\
+		\begin{bsmallmatrix}
+			\brak{W_{N/2}^{0}}^{0}	&	\brak{W_{N/2}^{0}}^{1} 	&	\cdots\\
+			\vdots	& \vdots\\
+			\brak{W_{N/2}^{N/2 - 1}}^{0}	&	\brak{W_{N/2}^{N/2 - 1}}^{1}	&	\cdots	
+		\end{bsmallmatrix} &
+		-\begin{bsmallmatrix}
+			W_{N/2}^0\brak{W_{N/2}^{0}}^{0}	&	W_{N/2}^0\brak{W_{N/2}^{0}}^{1}	&	\cdots\\
+			\vdots	& \vdots\\
+			W_{N}^{N/2-1}\brak{W_{N/2}^{N/2 - 1}}^{0}	&	W_{N}^{N/2-1}\brak{W_{N/2}^{N/2 -1}}^{1}	&	\cdots\\
+		\end{bsmallmatrix}\\
+	\end{bsmallmatrix}
+\end{align}
+\begin{align}
+	=\begin{bmatrix}
+		\vec{F}_{N/2}	&	\vec{D}_{N/2}	\vec{F}_{N/2}\\	
+		\vec{F}_{N/2}	&	-\vec{D}_{N/2}	\vec{F}_{N/2}
+	\end{bmatrix}\\
+\intertext{Where} \vec{D}_{N/2} = diag\myvec{W_{N}^0 & \cdots & W_{N}^{N/2 - 1}}\\
+			\vec{F}_{N/2} = 		\begin{bsmallmatrix}
+				\brak{W_{N/2}^{0}}^{0}	&	\brak{W_{N/2}^{0}}^{1} 	&	\cdots\\
+				\vdots	& \vdots\\
+				\brak{W_{N/2}^{N/2 - 1}}^{0}	&	\brak{W_{N/2}^{N/2 - 1}}^{1}	&	\cdots	
+			\end{bsmallmatrix}\\
+	\implies \vec{F}_{N} \vec{P}_{N}=\\
+	\begin{bmatrix}
+		\vec{I}_{N/2} & \vec{D}_{N/2} \\
+		\vec{I}_{N/2} & -\vec{D}_{N/2}
+	\end{bmatrix}
+	\begin{bmatrix}
+		\vec{F}_{N/2} & 0 \\
+		0 & \vec{F}_{N/2}
+	\end{bmatrix}
+\intertext{Multiply on both sides by $\vec{P}_N$ \quad \small $(\vec{P}_N)^2 = \vec{I}$}
+	\therefore \vec{F}_{N} =
+	\begin{bmatrix}
+		\vec{I}_{N/2} & \vec{D}_{N/2} \\
+		\vec{I}_{N/2} & -\vec{D}_{N/2}
+	\end{bmatrix}
+	\begin{bmatrix}
+		\vec{F}_{N/2} & 0 \\
+		0 & \vec{F}_{N/2}
+	\end{bmatrix}\vec{P}_{N}
+\end{align}
 \item Find 
 \begin{align}
 	\vec{P}_4 \vec{x}
@@ -901,6 +1007,7 @@ be the $4\times 4$ identity matrix.  Then the 4 point {\em DFT permutation matri
 	\vec{X} = \vec{F}_N \vec{x}
 	\label{eq:dft-mat-def}
 \end{align}
+
 where $\vec{x}, \vec{X}$ are the vector representations of $x(n), X(k)$ respectively.\\
 \solution
 \begin{align}
