--- a/Assignment 1/filter/main.tex
+++ b/Assignment 1/filter/main.tex
@@ -864,7 +864,9 @@ be the $4\times 4$ identity matrix.  Then the 4 point {\em DFT permutation matri
 			1	&	-i	&	-1	&	i\\
 			1	&	-1	&	1	&	-1\\
 			1	&	i	&	-1	&	-i\\
-		\end{bmatrix}\\
+		\end{bmatrix}
+\end{align}
+\begin{align}
 	= \begin{bmatrix}
 		W_{4}^0	&	W_{4}^0	&	W_{4}^0	&	W_{4}^0\\
 		W_{4}^0	&	W_{4}^1	&	W_{4}^2	&	W_{4}^3\\
@@ -901,7 +903,7 @@ Take Even - Odd permutation. i.e, multiply with $\vec{P}_N$
 		W_{N}^{(N-1)0}	&	W_{N}^{(N-1)2}	&	\cdots	&	\cdots	&	W_{N}^{(N-1)1}	&	W_{N}^{(N-1)3}	& \cdots
 	\end{bsmallmatrix}
 \end{align}
-abcd\\
+\\
 \begin{align}
 	=\begin{bsmallmatrix}
 		\brak{W_{N}^{0}}^{0}	&	\brak{W_{N}^{0}}^{2}	&	\cdots	&	W_{N}^1\brak{W_{N}^{0}}^{0}	&	W_{N}^1\brak{W_{N}^{0}}^{2}	&	\cdots\\
@@ -921,7 +923,7 @@ abcd\\
 		\brak{W_{N/2}^{N/2 - 1}}^{0}	&	\brak{W_{N/2}^{N/2 - 1}}^{1}	&	\cdots	&	W_{N}^{N/2-1}\brak{W_{N/2}^{N/2 + 1}}^{0}	&	W_{N}^{N/2-1}\brak{W_{N/2}^{N/2 -1}}^{1}	&	\cdots\\
 		\brak{W_{N/2}^{N/2 + 0}}^{0}	&	\brak{W_{N/2}^{N/2 + 0}}^{1}	&	\cdots	&	W_{N}^{N/2 + 0}\brak{W_{N/2}^{N/2 + 0}}^{0}	&	W_{N}^{N/2}\brak{W_{N/2}^{N/2+0}}^{1}	&	\cdots\\
 		\vdots	&&& \vdots\\
-		\brak{W_{N}^{N-1}}^{0}	&	\brak{W_{N}^{N-1}}^{2}	&	\cdots	&	W_{N}^{N/2 + (N/2-1)}\brak{W_{N/2}^{N-1}}^{0}	&	W_{N/2 + (N/2-1)}^{N-1}\brak{W_{N/2}^{N-1}}^{1}	&	\cdots
+		\brak{W_{N}^{N-1}}^{0}	&	\brak{W_{N}^{N-1}}^{2}	&	\cdots	&	W_{N}^{N/2 + (N/2-1)}\brak{W_{N/2}^{N-1}}^{0}	&	W_{N}^{N/2 + (N/2-1)}\brak{W_{N/2}^{N-1}}^{1}	&	\cdots
 	\end{bsmallmatrix}
 \end{align}
 \begin{align}
