--- a/Assignment 3/filter/main.tex
+++ b/Assignment 3/filter/main.tex
@@ -148,7 +148,7 @@
 	\def\topbox#1{\raisebox{-\baselineskip}[0in][0in]{#1}}
 	\def\midbox#1{\raisebox{-0.5\baselineskip}[0in][0in]{#1}}
 	
-	\vspace{3cm}
+	\vspace{5cm}
 	
 	\title{EE 3900 - Assignment 3}
 	
@@ -156,10 +156,11 @@
 	
 	\maketitle
 	
+
+\vspace{5cm}
 \section{Oppenhiem 2.29 a}
 
 Given Discrete time signal:\\
-
 \begin{align}
 x[n] = \begin{cases}
 	1	& $if $-1 \leq x \leq 3\\
@@ -167,31 +168,41 @@ x[n] = \begin{cases}
 	0 & $everywhere else$
 \end{cases}
 \end{align}
-
-
-It is plotted in the following figure
+\newline
+It is plotted in the following figure:
 \begin{figure}[!ht]
 	\begin{center}
-		\includegraphics[width=\columnwidth]{./xn.jpg}
+		\includegraphics[width=\columnwidth]{./figs/xn.jpg}
 	\end{center}
-	\caption{fig:$x[n]$}
+	\caption{$x[n]$}
 	\label{fig:x[n]}	
 \end{figure}
-
-$x[n-2]$ is plotted in the following figures
+\section*{Question: Find and plot $x[n-2]$}
+\section{\solution}
+\begin{align}
+	x[n - 2] = \begin{cases}
+	1	& $ if $1 \leq x \leq 5\\
+	\dfrac{1}{2} & $ if $ x = 6\\
+	0 & $everywhere else$
+\end{cases}
+\end{align}	
+$x[n-2]$ is plotted in the following figure
 \begin{figure}[!ht]
 	\begin{center}
-		\includegraphics[width=\columnwidth]{./xn2.jpg}
+		\includegraphics[width=\columnwidth]{./figs/xn2.jpg}
 	\end{center}
-	\caption{fig:$x[n - 2]$}
+	\caption{$x[n - 2]$}
 	\label{fig:x[n-2]}	
 \end{figure}
-\vspace{3 cm}
 
-The code used for this exercise can found at:
+\vspace{6cm}
+
+The code used for this exercise can found at:\\
+
 
 \begin{lstlisting}
 wget https://raw.githubusercontent.com/gadepall/EE1310/master/Assignment 3/a3.ipynb
 \end{lstlisting}
+
 
 \end{document}
